# projectm-visaulizer-music-video-creator-claude-4_1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh  setup_and_compile.zsh
backups/: AudioCaptureDevice.cpp  AudioCaptureDevice.h
docs/: ARCHITECTURE.md  ARCHITECTURE_2.md  BUILDING.md  BUILD_SYSTEM.md  DEVELOPMENT_CHANGELOG.md  GUI.md  PRESETS.md  RECORDING.md  ROADMAP.md  SETTINGS.md  TEXT_OVERLAY.md  project-structure.md  projectm-manual-standalone-with-keybindings.md
scripts/: build_projectm.sh
src/: main.cpp
src/core/: Application.cpp  Application.h  Config.cpp  Config.h
src/core/audio/: AudioEngine.cpp  AudioEngine.h
src/gui/: MainWindow.cpp  MainWindow.h  PlaylistWidget.cpp  PlaylistWidget.h  SettingsDialog.cpp  SettingsDialog.h
src/visualizer/: FboRenderer.cpp  FboRenderer.h  PresetManager.cpp  PresetManager.h  ProjectMWidget.cpp  ProjectMWidget.h  TextRenderer.cpp  TextRenderer.h  VideoExporter.cpp  VideoExporter.h
